httpd/httpd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: httpd-via-cf
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: ht.plabs.eu.org
    http:
      paths:
      - backend:
          service:
            name: httpd
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  ClusterIP: {}
